package handlers

import (
	"context"
	"fmt"
	"net/http"
	"time"

	"github.com/gin-gonic/gin"
	"github.com/google/uuid"
	"github.com/tafolabi009/backend/go_backend/internal/models"
	"github.com/tafolabi009/backend/go_backend/internal/repository"
	"github.com/tafolabi009/backend/go_backend/pkg/database"
	"github.com/tafolabi009/backend/go_backend/pkg/pdfgen"
)

// CreateValidation creates a new validation job
func CreateValidation(c *gin.Context) {
	userID := c.GetString("user_id")

	var req models.CreateValidationRequest
	if err := c.ShouldBindJSON(&req); err != nil {
		c.JSON(http.StatusBadRequest, gin.H{
			"error": gin.H{
				"code":    "INVALID_REQUEST",
				"message": err.Error(),
			},
		})
		return
	}

	// Generate validation ID
	validationID := "val_" + uuid.New().String()[:8]

	// TODO: Verify dataset exists and belongs to user
	// TODO: Create validation job in database
	// TODO: Queue job for processing via gRPC

	_ = userID

	// Calculate estimated completion (mock)
	estimatedCompletion := time.Now().Add(24 * time.Hour)
	if req.Options.Priority == "express" {
		estimatedCompletion = time.Now().Add(12 * time.Hour)
	}

	response := models.CreateValidationResponse{
		ValidationID:        validationID,
		DatasetID:           req.DatasetID,
		Status:              "queued",
		EstimatedCompletion: estimatedCompletion,
		EstimatedCost:       35000,
		Stages: []models.ValidationStage{
			{Stage: "diversity_analysis", Status: "pending", EstimatedDuration: 14400},
			{Stage: "cascade_training", Status: "pending", EstimatedDuration: 108000},
			{Stage: "collapse_detection", Status: "pending", EstimatedDuration: 21600},
			{Stage: "report_generation", Status: "pending", EstimatedDuration: 7200},
		},
	}

	c.JSON(http.StatusCreated, response)
}

// ListValidations returns paginated list of validations
func ListValidations(c *gin.Context) {
	userID := c.GetString("user_id")

	// TODO: Query parameters and database fetch
	_ = userID

	// Mock response
	validations := []models.Validation{
		{
			ID:                  "val_ghi789",
			DatasetID:           "ds_def456",
			UserID:              userID,
			Status:              "completed",
			RiskScore:           func() *int { v := 23; return &v }(),
			RiskLevel:           func() *string { v := "low"; return &v }(),
			Recommendation:      func() *string { v := "approved"; return &v }(),
			WarrantyEligible:    func() *bool { v := true; return &v }(),
			CreatedAt:           time.Now().Add(-48 * time.Hour),
			StartedAt:           func() *time.Time { t := time.Now().Add(-47 * time.Hour); return &t }(),
			CompletedAt:         func() *time.Time { t := time.Now().Add(-24 * time.Hour); return &t }(),
			EstimatedCompletion: time.Now().Add(-24 * time.Hour),
		},
	}

	response := models.ValidationListResponse{
		Validations: validations,
		Pagination: models.Pagination{
			Page:       1,
			PageSize:   20,
			TotalCount: 1,
			TotalPages: 1,
		},
	}

	c.JSON(http.StatusOK, response)
}

// GetValidation returns validation details and results
func GetValidation(c *gin.Context) {
	validationID := c.Param("id")
	userID := c.GetString("user_id")

	// TODO: Fetch from database and verify ownership
	_ = userID

	// Mock completed validation
	validation := gin.H{
		"validation_id": validationID,
		"dataset_id":    "ds_def456",
		"status":        "completed",
		"created_at":    time.Now().Add(-48 * time.Hour).Format(time.RFC3339),
		"completed_at":  time.Now().Add(-24 * time.Hour).Format(time.RFC3339),
		"results": models.ValidationResults{
			RiskScore: 23,
			RiskLevel: "low",
			PredictedPerformance: models.PredictedPerformance{
				Accuracy:           0.87,
				ConfidenceInterval: []float64{0.84, 0.90},
				ConfidenceLevel:    0.95,
			},
			CollapseProbability: 0.05,
			Dimensions: map[string]int{
				"distribution_fidelity":    92,
				"correlation_preservation": 88,
				"diversity_retention":      85,
				"rare_pattern_handling":    78,
				"temporal_stability":       91,
				"semantic_coherence":       89,
			},
			Recommendation:   "approved",
			WarrantyEligible: true,
		},
		"report_url":      "/api/v1/validations/" + validationID + "/report",
		"certificate_url": "/api/v1/validations/" + validationID + "/certificate",
	}

	c.JSON(http.StatusOK, validation)
}

// GetValidationReport generates and returns validation report PDF
func GetValidationReport(c *gin.Context) {
	validationID := c.Param("id")
	userID := c.GetString("user_id")

	ctx := context.Background()
	validationRepo := repository.NewValidationRepository(database.GetDB())
	
	validation, err := validationRepo.GetByID(ctx, validationID)
	if err != nil {
		c.JSON(http.StatusNotFound, gin.H{
			"error": gin.H{
				"code":    "NOT_FOUND",
				"message": "Validation not found",
			},
		})
		return
	}

	// Verify ownership
	if validation.UserID != userID {
		c.JSON(http.StatusForbidden, gin.H{
			"error": gin.H{
				"code":    "FORBIDDEN",
				"message": "You do not have access to this validation",
			},
		})
		return
	}

	// Check if completed
	if validation.Status != "completed" {
		c.JSON(http.StatusBadRequest, gin.H{
			"error": gin.H{
				"code":    "NOT_COMPLETED",
				"message": "Report can only be generated for completed validations",
			},
		})
		return
	}

	// Generate PDF report
	// For now, create mock results (in production, fetch from validation_results table)
	mockResults := &models.ValidationResults{
		RiskScore: *validation.RiskScore,
		RiskLevel: *validation.RiskLevel,
		PredictedPerformance: models.PredictedPerformance{
			Accuracy:           0.87,
			ConfidenceInterval: []float64{0.84, 0.90},
			ConfidenceLevel:    0.95,
		},
		CollapseProbability: 0.05,
		Dimensions: map[string]int{
			"distribution_fidelity":    92,
			"correlation_preservation": 88,
			"diversity_retention":      85,
			"rare_pattern_handling":    78,
			"temporal_stability":       91,
			"semantic_coherence":       89,
		},
		Recommendation:   *validation.Recommendation,
		WarrantyEligible: *validation.WarrantyEligible,
	}

	pdfBytes, err := pdfgen.GenerateValidationReport(validation, mockResults)
	if err != nil {
		c.JSON(http.StatusInternalServerError, gin.H{
			"error": gin.H{
				"code":    "PDF_GENERATION_ERROR",
				"message": "Failed to generate PDF report",
			},
		})
		return
	}

	// Set headers and send PDF
	c.Header("Content-Type", "application/pdf")
	c.Header("Content-Disposition", fmt.Sprintf("attachment; filename=validation_report_%s.pdf", validationID))
	c.Data(http.StatusOK, "application/pdf", pdfBytes)
}

// GetValidationCertificate returns validation certificate PDF
func GetValidationCertificate(c *gin.Context) {
	validationID := c.Param("id")
	userID := c.GetString("user_id")

	ctx := context.Background()
	validationRepo := repository.NewValidationRepository(database.GetDB())
	
	validation, err := validationRepo.GetByID(ctx, validationID)
	if err != nil {
		c.JSON(http.StatusNotFound, gin.H{
			"error": gin.H{
				"code":    "NOT_FOUND",
				"message": "Validation not found",
			},
		})
		return
	}

	// Verify ownership
	if validation.UserID != userID {
		c.JSON(http.StatusForbidden, gin.H{
			"error": gin.H{
				"code":    "FORBIDDEN",
				"message": "You do not have access to this validation",
			},
		})
		return
	}

	// Check if warranty eligible
	if validation.WarrantyEligible == nil || !*validation.WarrantyEligible {
		c.JSON(http.StatusBadRequest, gin.H{
			"error": gin.H{
				"code":    "NOT_ELIGIBLE",
				"message": "Certificate can only be generated for warranty-eligible validations",
			},
		})
		return
	}

	// Find warranty for this validation (mock for now)
	warrantyID := "war_" + validationID[4:]

	// Generate PDF certificate
	pdfBytes, err := pdfgen.GenerateWarrantyCertificate(validation, warrantyID)
	if err != nil {
		c.JSON(http.StatusInternalServerError, gin.H{
			"error": gin.H{
				"code":    "PDF_GENERATION_ERROR",
				"message": "Failed to generate PDF certificate",
			},
		})
		return
	}

	// Set headers and send PDF
	c.Header("Content-Type", "application/pdf")
	c.Header("Content-Disposition", fmt.Sprintf("attachment; filename=warranty_certificate_%s.pdf", validationID))
	c.Data(http.StatusOK, "application/pdf", pdfBytes)
}

// GetCollapseDetails returns detailed collapse analysis
func GetCollapseDetails(c *gin.Context) {
	validationID := c.Param("id")
	userID := c.GetString("user_id")

	// TODO: Fetch from database
	_ = userID

	// Mock collapse details
	details := models.CollapseDetails{
		ValidationID:     validationID,
		CollapseDetected: true,
		CollapseType:     "Type B: Correlation Collapse",
		Severity:         "medium",
		AffectedDimensions: []models.AffectedDimension{
			{Dimension: "correlation_preservation", Score: 62, Threshold: 70, Impact: "high"},
			{Dimension: "rare_pattern_handling", Score: 58, Threshold: 70, Impact: "medium"},
		},
		ProblematicRegions: []models.ProblematicRegion{
			{
				RegionID:        "reg_001",
				RowRange:        []int64{1200000, 1500000},
				Issue:           "duplicate_entities",
				ImpactScore:     35,
				AffectedColumns: []string{"user_id", "email"},
			},
		},
		RootCauses: []models.RootCause{
			{Cause: "Duplicate entities detected", Percentage: 60, Description: "~15% of rows are duplicates (300K rows)"},
			{Cause: "Excessive outliers", Percentage: 30, Description: "Outlier density >10% in numerical columns"},
		},
	}

	c.JSON(http.StatusOK, details)
}

// GetRecommendations returns actionable fix recommendations
func GetRecommendations(c *gin.Context) {
	validationID := c.Param("id")
	userID := c.GetString("user_id")

	// TODO: Fetch from database
	_ = userID

	// Mock recommendations
	recommendations := models.Recommendations{
		ValidationID: validationID,
		Recommendations: []models.Recommendation{
			{
				Priority: 1,
				Category: "data_removal",
				Title:    "Remove duplicate entities",
				Description: "Remove rows 1.2M-1.5M (duplicate user accounts)",
				Impact: models.RecommendationImpact{
					CurrentRiskScore:  62,
					ExpectedRiskScore: 38,
					Improvement:       24,
				},
				Implementation: models.Implementation{
					Method:        "deduplication",
					AffectedRows:  300000,
					EstimatedTime: "2 hours",
				},
			},
		},
		CombinedImpact: models.CombinedImpact{
			CurrentRiskScore:  62,
			ExpectedRiskScore: 15,
			TotalImprovement:  47,
			EstimatedTime:     "3.5 hours",
		},
	}

	c.JSON(http.StatusOK, recommendations)
}
